<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".InfoCar">

    <TextView
        android:id="@+id/tvCaption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvCaptinNew"
        style="@style/FontSettingsFirst"/>

    <TextView
        android:id="@+id/tvManufacturer"
        android:layout_below="@+id/tvCaption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="24dp"
        android:text="@string/tvManufacturer"
        style="@style/InfoTv"/>

    <EditText
        android:id="@+id/edManufacturer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/tvModel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvModel"
        style="@style/InfoTv"/>

    <EditText
        android:id="@+id/edModel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""
        android:textAlignment="center" />

    <TextView
        android:id="@+id/tvPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvPrice"
        style="@style/InfoTv"/>

    <EditText
        android:id="@+id/edPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/tvPower"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvPower"
        style="@style/InfoTv"/>

    <EditText
        android:id="@+id/edPower"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/tvFuel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvFuel"
        style="@style/InfoTv"/>

    <EditText
        android:id="@+id/edFuel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""
        android:textAlignment="center" />

    <TextView
        android:id="@+id/tvTransmission"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvTransmission"
        style="@style/InfoTv"/>

    <EditText
        android:id="@+id/edTransmission"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""
        android:textAlignment="center" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_marginVertical="32dp"
        android:layout_height="wrap_content"
        android:text="@string/buttonNew" />
</LinearLayout>